add FileStorageService and update image management